<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@drawable/splash"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/EsqueciMinhaSenha"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/Organize"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/RegisterNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EsqueciMinhaSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:text="@string/Scfi"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>