<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/textoEsqueciMinhaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEsqueciMinhaSenha"
        android:layout_marginBottom="166dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/EsqueciSenhaOrientacao"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/btnRecuperarSenha"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SenhaRecuperarTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/btngray"
        android:onClick="RecuperarSenha"
        android:textColor="@android:color/black"
        android:text="@string/RecuperarSenha" />

    <EditText
        android:id="@+id/SenhaRecuperarTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_email_white"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/Email"
        android:background="@drawable/barra_login"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" 
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

</RelativeLayout>

