<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout
	  android:id="@+id/receitas"
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_marginBottom="20dp"
	  android:layout_height="match_parent">
	  
	    <TextView android:text="@string/escolhaMesesReceitas"
	  			android:textSize="14dip"
	  			android:id="@+id/escolhaMesesid"
	  			android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	        	android:gravity="center"
	  			android:layout_marginBottom="2dp"
	  			android:layout_marginTop="23dp"
	  			android:textAlignment="gravity"
	  			android:textColor="@android:color/holo_orange_dark"/>
	    
	      <View	android:id="@+id/secondtDivider"
	        	android:layout_height="1dp"
	        	android:layout_marginTop="15dp"
	        	android:layout_width="fill_parent"
	        	android:layout_marginLeft="28dp"
	        	android:layout_marginRight="28dp"
	        	android:background="#C8C8C8" />
	      
		<!-- DropDown de Meses -->    
	    <Spinner
	        	android:id="@+id/dropdownMeses"
	        	android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:layout_marginLeft="40dp"
	  			android:layout_marginTop="10dp"
	  			android:layout_marginRight="40dp"
	  			android:entries="@array/itensmeses"
	  			android:prompt="@string/Meses"
	  	/>
	    
	     <View	android:id="@+id/threeDivider"
	        	android:layout_height="1dp"
	        	android:layout_marginTop="8dp"
	        	android:layout_width="fill_parent"
	        	android:layout_marginLeft="28dp"
	        	android:layout_marginRight="23dp"
	        	android:background="#C8C8C8" />
	  
	  <TextView android:text="@string/situacaoAtual"
	  			android:textSize="16dip"
	  			android:id="@+id/receitasId"
	  			android:textStyle="bold" 
	  			android:layout_marginTop="12dp"
	  			android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:gravity="center"
	  			android:textColor="@android:color/holo_green_dark"/>
	    
	     <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="14dp"
	        android:text="@string/InformacoesReceitas"
	        android:textAlignment="center"
	        android:textColor="@android:color/holo_red_dark"
	        android:textSize="14dip"
	        android:id="@+id/informaCoesReceitas" />
	     
	     
	     <ListView
		    android:id="@+id/listViewId"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
   	        android:layout_marginLeft="18dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="20dp">
		</ListView> 
		
	     
    	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	         android:layout_marginTop="60dp"
	        android:text="Não há transações para o mês escolhido"
	        android:textAlignment="center"
	        android:textColor="@android:color/holo_orange_dark"
	        android:textSize="16dip"
	        android:visibility="invisible"
	        android:id="@+id/validacaoExisteTransacao" />
	        
	        
	</LinearLayout>
</ScrollView>